[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/explosion.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 7.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 6.0

[sub_resource type="Animation" id=3]
resource_name = "Muzleflash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Explosion"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
visible = false
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.2

[node name="explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
rotation = 0.349066
texture = ExtResource( 3 )

[node name="hit_player" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_player"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="muzle" type="AnimationPlayer" parent="."]
anims/Muzleflash = SubResource( 3 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Explosion = SubResource( 7 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 5 )

[node name="timer_morte" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootSpeed" to="." method="_on_ShootSpeed_timeout"]
[connection signal="body_entered" from="hit_player" to="." method="_on_hit_player_body_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
